FIX: make desc resizing more robust

--- a/atef/ui/range_comparison_widget.ui
+++ b/atef/ui/range_comparison_widget.ui
@@ -7,13 +7,25 @@
     <x>0</x>
     <y>0</y>
     <width>481</width>
-    <height>226</height>
+    <height>164</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
@@ -213,7 +225,7 @@
       </widget>
      </item>
      <item row="0" column="4">
-      <widget class="PyDMDrawingLine" name="green_line">
+      <widget class="PyDMDrawingLine" name="green_line" native="true">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -242,7 +254,7 @@
       </widget>
      </item>
      <item row="0" column="0">
-      <widget class="PyDMDrawingLine" name="left_red_line">
+      <widget class="PyDMDrawingLine" name="left_red_line" native="true">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -271,7 +283,7 @@
       </widget>
      </item>
      <item row="0" column="5" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_3">
+      <widget class="PyDMDrawingLine" name="vertical_line_3" native="true">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -296,7 +308,7 @@
       </widget>
      </item>
      <item row="0" column="2">
-      <widget class="PyDMDrawingLine" name="left_yellow_line">
+      <widget class="PyDMDrawingLine" name="left_yellow_line" native="true">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -325,7 +337,7 @@
       </widget>
      </item>
      <item row="0" column="3" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_2">
+      <widget class="PyDMDrawingLine" name="vertical_line_2" native="true">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -360,7 +372,7 @@
       </widget>
      </item>
      <item row="0" column="7" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_4">
+      <widget class="PyDMDrawingLine" name="vertical_line_4" native="true">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -385,7 +397,7 @@
       </widget>
      </item>
      <item row="0" column="1" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_1">
+      <widget class="PyDMDrawingLine" name="vertical_line_1" native="true">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -410,7 +422,7 @@
       </widget>
      </item>
      <item row="0" column="6">
-      <widget class="PyDMDrawingLine" name="right_yellow_line">
+      <widget class="PyDMDrawingLine" name="right_yellow_line" native="true">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -449,7 +461,7 @@
       </widget>
      </item>
      <item row="0" column="8">
-      <widget class="PyDMDrawingLine" name="right_red_line">
+      <widget class="PyDMDrawingLine" name="right_red_line" native="true">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -500,19 +512,6 @@
       <string>Inclusive</string>
      </property>
     </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
