--- a/atef/ui/any_value_widget.ui
+++ b/atef/ui/any_value_widget.ui
@@ -55,6 +55,9 @@
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>100</number>
      </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
