--- a/atef/ui/configuration_group_widget.ui
+++ b/atef/ui/configuration_group_widget.ui
@@ -92,6 +92,9 @@
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>100</number>
      </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
