--- a/atef/ui/pv_configuration_page.ui
+++ b/atef/ui/pv_configuration_page.ui
@@ -151,6 +151,9 @@
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
           <attribute name="verticalHeaderVisible">
            <bool>false</bool>
           </attribute>
