--- a/atef/ui/tool_configuration_page.ui
+++ b/atef/ui/tool_configuration_page.ui
@@ -70,6 +70,9 @@
    </item>
    <item>
     <widget class="QTableWidget" name="comparisons_table">
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
