--- a/atef/ui/value_set_widget.ui
+++ b/atef/ui/value_set_widget.ui
@@ -67,6 +67,9 @@
      <attribute name="horizontalHeaderDefaultSectionSize">
       <number>200</number>
      </attribute>
+     <attribute name="horizontalHeaderStretchLastSection">
+      <bool>true</bool>
+     </attribute>
      <attribute name="verticalHeaderVisible">
       <bool>false</bool>
      </attribute>
