--- a/atef/ui/archive_viewer_widget.ui
+++ b/atef/ui/archive_viewer_widget.ui
@@ -19,30 +19,18 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="widget_layout" stretch="3,1">
-   <property name="leftMargin">
-    <number>5</number>
-   </property>
-   <property name="topMargin">
-    <number>5</number>
-   </property>
-   <property name="rightMargin">
-    <number>5</number>
-   </property>
-   <property name="bottomMargin">
-    <number>5</number>
-   </property>
+  <layout class="QVBoxLayout" name="verticalLayout" stretch="2,1">
    <item>
-    <layout class="QVBoxLayout" name="plot_layout">
+    <widget class="PyDMArchiverTimePlot" name="time_plot">
+     <property name="toolTip">
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="control_layout">
      <item>
-      <widget class="PyDMArchiverTimePlot" name="time_plot">
-       <property name="toolTip">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="button_layout">
+      <layout class="QVBoxLayout" name="signal_layout">
        <property name="leftMargin">
         <number>5</number>
        </property>
@@ -56,9 +44,48 @@
         <number>5</number>
        </property>
        <item>
-        <widget class="QPushButton" name="button_month">
+        <widget class="QLineEdit" name="input_field">
+         <property name="placeholderText">
+          <string>PV:Enter:To:Submit</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QTableView" name="curve_list"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="redraw_button">
          <property name="text">
-          <string>1M</string>
+          <string>Redraw Curves</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+      <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="leftMargin">
+        <number>5</number>
+       </property>
+       <property name="topMargin">
+        <number>5</number>
+       </property>
+       <property name="rightMargin">
+        <number>5</number>
+       </property>
+       <property name="bottomMargin">
+        <number>5</number>
+       </property>
+       <item>
+        <widget class="QPushButton" name="button_day">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>1d</string>
          </property>
         </widget>
        </item>
@@ -70,42 +97,13 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="button_day">
+        <widget class="QPushButton" name="button_month">
          <property name="text">
-          <string>1d</string>
+          <string>1M</string>
          </property>
         </widget>
        </item>
       </layout>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QVBoxLayout" name="signal_layout">
-     <property name="leftMargin">
-      <number>5</number>
-     </property>
-     <property name="topMargin">
-      <number>5</number>
-     </property>
-     <property name="rightMargin">
-      <number>5</number>
-     </property>
-     <property name="bottomMargin">
-      <number>5</number>
-     </property>
-     <item>
-      <widget class="QLineEdit" name="input_field"/>
-     </item>
-     <item>
-      <widget class="QTableView" name="curve_list"/>
-     </item>
-     <item>
-      <widget class="QPushButton" name="redraw_button">
-       <property name="text">
-        <string>Redraw Curves</string>
-       </property>
-      </widget>
      </item>
     </layout>
    </item>
