--- a/atef/ui/config_window.ui
+++ b/atef/ui/config_window.ui
@@ -26,7 +26,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -47,8 +47,15 @@
     <addaction name="action_print_dataclass"/>
     <addaction name="action_print_serialized"/>
    </widget>
+   <widget class="QMenu" name="menuUtilities">
+    <property name="title">
+     <string>Utilities</string>
+    </property>
+    <addaction name="action_open_archive_viewer"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuDebug"/>
+   <addaction name="menuUtilities"/>
   </widget>
   <widget class="QStatusBar" name="status_bar"/>
   <action name="action_new_file">
@@ -84,6 +91,11 @@
   <action name="action_print_serialized">
    <property name="text">
     <string>Print Serialized</string>
+   </property>
+  </action>
+  <action name="action_open_archive_viewer">
+   <property name="text">
+    <string>Open Archive Viewer</string>
    </property>
   </action>
  </widget>
