--- a/atef/ui/name_desc_tags_widget.ui
+++ b/atef/ui/name_desc_tags_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>148</height>
+    <height>161</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -55,6 +55,13 @@
        </widget>
       </item>
       <item>
+       <widget class="QToolButton" name="action_button">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="name_label">
         <property name="text">
          <string>Name:</string>
@@ -68,6 +75,12 @@
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -86,8 +99,23 @@
       </item>
       <item>
        <widget class="QLabel" name="extra_text_label">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="text">
          <string/>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
