MNT: Rework RunCheck to gather all relevant comparisons, fixing many-to-1 comparisons

--- a/atef/ui/run_check.ui
+++ b/atef/ui/run_check.ui
@@ -105,7 +105,7 @@
     </spacer>
    </item>
    <item>
-    <widget class="QPushButton" name="pushButton">
+    <widget class="QPushButton" name="next_button">
      <property name="minimumSize">
       <size>
        <width>0</width>
