--- a/atef/ui/general_procedure_widget.ui
+++ b/atef/ui/general_procedure_widget.ui
@@ -37,7 +37,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QComboBox" name="invert_combo"/>
+    <widget class="QComboBox" name="verify_combo"/>
    </item>
   </layout>
  </widget>
