--- a/atef/ui/general_procedure_widget.ui
+++ b/atef/ui/general_procedure_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>25</height>
+    <height>56</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,14 +30,24 @@
     <number>0</number>
    </property>
    <item row="0" column="0">
-    <widget class="QLabel" name="label_3">
+    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>Verify Mode:</string>
+      <string>Verify Required:</string>
      </property>
     </widget>
    </item>
    <item row="0" column="1">
     <widget class="QComboBox" name="verify_combo"/>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Step Sucess Required: </string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QComboBox" name="step_success_combo"/>
    </item>
   </layout>
  </widget>
