--- a/atef/ui/run_check.ui
+++ b/atef/ui/run_check.ui
@@ -27,14 +27,21 @@
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
-    <widget class="QLabel" name="status_label">
+    <widget class="QLabel" name="result_label">
      <property name="text">
       <string>?</string>
      </property>
     </widget>
    </item>
    <item>
-    <spacer name="status_verify_spacer">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <spacer name="result_verify_spacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
@@ -48,20 +55,39 @@
    </item>
    <item>
     <widget class="QToolButton" name="verify_button">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>75</width>
        <height>25</height>
       </size>
+     </property>
+     <property name="focusPolicy">
+      <enum>Qt::StrongFocus</enum>
      </property>
      <property name="text">
       <string>Verify</string>
      </property>
+     <property name="popupMode">
+      <enum>QToolButton::InstantPopup</enum>
+     </property>
      <property name="toolButtonStyle">
-      <enum>Qt::ToolButtonTextBesideIcon</enum>
+      <enum>Qt::ToolButtonTextOnly</enum>
      </property>
      <property name="arrowType">
       <enum>Qt::DownArrow</enum>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="verify_label">
+     <property name="text">
+      <string>?</string>
      </property>
     </widget>
    </item>
@@ -88,6 +114,13 @@
      </property>
      <property name="text">
       <string>Run</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="run_success_label">
+     <property name="text">
+      <string>?</string>
      </property>
     </widget>
    </item>
