MNT: typos and style fixes

--- a/atef/ui/general_procedure_widget.ui
+++ b/atef/ui/general_procedure_widget.ui
@@ -42,7 +42,7 @@
    <item row="1" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Step Sucess Required: </string>
+      <string>Step must succeed: </string>
      </property>
     </widget>
    </item>
