--- a/atef/ui/passive_run_widget.ui
+++ b/atef/ui/passive_run_widget.ui
@@ -17,6 +17,19 @@
    <item>
     <widget class="QTreeView" name="tree_view"/>
    </item>
+   <item>
+    <widget class="QPushButton" name="refresh_button">
+     <property name="text">
+      <string> Refresh Status Icons</string>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>20</width>
+       <height>20</height>
+      </size>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <resources/>
