--- a/atef/ui/set_value_edit_widget.ui
+++ b/atef/ui/set_value_edit_widget.ui
@@ -15,48 +15,16 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QTableWidget" name="actions_table">
-     <property name="dragEnabled">
-      <bool>true</bool>
-     </property>
-     <property name="dragDropOverwriteMode">
-      <bool>false</bool>
-     </property>
-     <property name="dragDropMode">
-      <enum>QAbstractItemView::InternalMove</enum>
-     </property>
-     <property name="columnCount">
-      <number>1</number>
-     </property>
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
-     </attribute>
-     <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Actions</string>
-      </property>
-     </column>
-    </widget>
+    <widget class="QWidget" name="actions_table_placeholder" native="true"/>
    </item>
    <item>
-    <widget class="QTableWidget" name="checks_table">
-     <property name="columnCount">
-      <number>1</number>
+    <widget class="QWidget" name="checks_table_placeholder" native="true">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
      </property>
-     <attribute name="horizontalHeaderStretchLastSection">
-      <bool>true</bool>
-     </attribute>
-     <attribute name="verticalHeaderVisible">
-      <bool>false</bool>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Checks</string>
-      </property>
-     </column>
     </widget>
    </item>
    <item>
