--- a/atef/ui/step_page.ui
+++ b/atef/ui/step_page.ui
@@ -79,14 +79,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_10">
-     <property name="text">
-      <string>General Settings</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QWidget" name="general_procedure_placeholder" native="true"/>
+    <widget class="QFrame" name="general_procedure_placeholder"/>
    </item>
    <item>
     <widget class="QWidget" name="bottom_spacer" native="true">
