--- a/atef/ui/check_row_widget.ui
+++ b/atef/ui/check_row_widget.ui
@@ -57,7 +57,7 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>40</width>
+       <width>50</width>
        <height>20</height>
       </size>
      </property>
@@ -76,6 +76,19 @@
       <string>...</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
