MNT: fix positioning of run mode toggle and close

--- a/atef/ui/config_window.ui
+++ b/atef/ui/config_window.ui
@@ -16,7 +16,11 @@
   <widget class="QWidget" name="central_widget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QTabWidget" name="tab_widget"/>
+     <widget class="QTabWidget" name="tab_widget">
+      <property name="tabsClosable">
+       <bool>true</bool>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
