--- a/atef/ui/equals_comparison_widget.ui
+++ b/atef/ui/equals_comparison_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>238</width>
-    <height>113</height>
+    <height>132</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,14 +59,12 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="value_edit">
-       <property name="font">
-        <font>
-         <pointsize>16</pointsize>
-        </font>
-       </property>
-       <property name="placeholderText">
-        <string>0</string>
+      <widget class="QWidget" name="value_widget" native="true">
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
        </property>
       </widget>
      </item>
@@ -106,24 +104,17 @@
        </property>
       </widget>
      </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="rtol_label">
-       <property name="text">
-        <string>Relative Tolerance:</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="data_type_label">
-       <property name="text">
-        <string>Data Type:</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
       <widget class="QLineEdit" name="atol_edit">
        <property name="placeholderText">
         <string>0</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="rtol_label">
+       <property name="text">
+        <string>Relative Tolerance:</string>
        </property>
       </widget>
      </item>
@@ -133,9 +124,6 @@
         <string>0</string>
        </property>
       </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QComboBox" name="data_type_combo"/>
      </item>
     </layout>
    </item>
