--- a/atef/ui/range_comparison_widget.ui
+++ b/atef/ui/range_comparison_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>481</width>
-    <height>164</height>
+    <height>170</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -36,116 +36,8 @@
        <property name="horizontalSpacing">
         <number>9</number>
        </property>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="warn_low_edit">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="placeholderText">
-          <string>0.0</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="4">
         <widget class="QLabel" name="comp_symbol_label_2">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>?</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="2">
-        <widget class="QLabel" name="comp_symbol_label_1">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>?</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="5">
-        <widget class="QLineEdit" name="warn_high_edit">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="placeholderText">
-          <string>0.0</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="3">
-        <widget class="QLabel" name="x_label_2">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>x</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="low_edit">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="placeholderText">
-          <string>0.0</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QLabel" name="x_label_1">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string>x</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="5">
-        <widget class="QLineEdit" name="high_edit">
-         <property name="font">
-          <font>
-           <pointsize>16</pointsize>
-          </font>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-         <property name="placeholderText">
-          <string>0.0</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="4">
-        <widget class="QLabel" name="comp_symbol_label_4">
          <property name="font">
           <font>
            <pointsize>16</pointsize>
@@ -180,6 +72,18 @@
          </property>
         </widget>
        </item>
+       <item row="0" column="2">
+        <widget class="QLabel" name="comp_symbol_label_1">
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>?</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0">
         <widget class="QLabel" name="warning_label">
          <property name="font">
@@ -189,6 +93,82 @@
          </property>
          <property name="text">
           <string>Warning</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="QLabel" name="x_label_2">
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>x</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QLabel" name="x_label_1">
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>x</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="4">
+        <widget class="QLabel" name="comp_symbol_label_4">
+         <property name="font">
+          <font>
+           <pointsize>16</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>?</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QWidget" name="low_widget" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QWidget" name="warn_low_widget" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="5">
+        <widget class="QWidget" name="high_widget" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="5">
+        <widget class="QWidget" name="warn_high_widget" native="true">
+         <property name="minimumSize">
+          <size>
+           <width>50</width>
+           <height>20</height>
+          </size>
          </property>
         </widget>
        </item>
@@ -225,7 +205,7 @@
       </widget>
      </item>
      <item row="0" column="4">
-      <widget class="PyDMDrawingLine" name="green_line" native="true">
+      <widget class="PyDMDrawingLine" name="green_line">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -254,7 +234,7 @@
       </widget>
      </item>
      <item row="0" column="0">
-      <widget class="PyDMDrawingLine" name="left_red_line" native="true">
+      <widget class="PyDMDrawingLine" name="left_red_line">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -283,7 +263,7 @@
       </widget>
      </item>
      <item row="0" column="5" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_3" native="true">
+      <widget class="PyDMDrawingLine" name="vertical_line_3">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -308,7 +288,7 @@
       </widget>
      </item>
      <item row="0" column="2">
-      <widget class="PyDMDrawingLine" name="left_yellow_line" native="true">
+      <widget class="PyDMDrawingLine" name="left_yellow_line">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -337,7 +317,7 @@
       </widget>
      </item>
      <item row="0" column="3" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_2" native="true">
+      <widget class="PyDMDrawingLine" name="vertical_line_2">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -372,7 +352,7 @@
       </widget>
      </item>
      <item row="0" column="7" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_4" native="true">
+      <widget class="PyDMDrawingLine" name="vertical_line_4">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -397,7 +377,7 @@
       </widget>
      </item>
      <item row="0" column="1" alignment="Qt::AlignHCenter">
-      <widget class="PyDMDrawingLine" name="vertical_line_1" native="true">
+      <widget class="PyDMDrawingLine" name="vertical_line_1">
        <property name="minimumSize">
         <size>
          <width>20</width>
@@ -422,7 +402,7 @@
       </widget>
      </item>
      <item row="0" column="6">
-      <widget class="PyDMDrawingLine" name="right_yellow_line" native="true">
+      <widget class="PyDMDrawingLine" name="right_yellow_line">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -461,7 +441,7 @@
       </widget>
      </item>
      <item row="0" column="8">
-      <widget class="PyDMDrawingLine" name="right_red_line" native="true">
+      <widget class="PyDMDrawingLine" name="right_red_line">
        <property name="minimumSize">
         <size>
          <width>20</width>
