GUI: improve happi_select button readability, rename ui file

--- a/atef/ui/multi_mode_value_edit.ui
+++ b/atef/ui/multi_mode_value_edit.ui
@@ -107,6 +107,9 @@
         </property>
         <item>
          <widget class="QPushButton" name="happi_select_component">
+          <property name="styleSheet">
+           <string notr="true">text-align:left;</string>
+          </property>
           <property name="text">
            <string>click to select</string>
           </property>
